--- a/app.env
+++ b/app.env
@@ -1,11 +1,11 @@
 # database
-DB_DRIVER=
-DB_SOURCE=
+DB_DRIVER=postgres
+DB_SOURCE=postgresql://root:secret@192.168.15.43/extension_db?sslmode=disable
 
 # server
-GRPC_SERVER_ADDRESS=
+GRPC_SERVER_ADDRESS=0.0.0.0:8081
 
 # token
-TOKEN_SYMETRIC_KEY=
-ACCESS_TOKEN_DURATION=
-REFRESH_TOKEN_DURATION=
+TOKEN_SYMETRIC_KEY=12345678123456781234567812345678
+ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
