--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,10 +1,10 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "./database/query/"
-    schema: "./database/migration/"
+    queries: "./db/query/"
+    schema: "./db/migration/"
     gen:
       go:
         package: "db"
-        out: "./database/sqlc"
+        out: "./db/sqlc"
         emit_json_tags: true
