--- a/extension/package.json
+++ b/extension/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-scrollbar": "3.0.5"
+    "react-hook-form": "^7.49.3",
+    "tailwind-scrollbar": "3.0.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.23",
