--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,3 +8,5 @@ sql:
         package: "db"
         out: "./db/sqlc"
         emit_json_tags: true
+        emit_interface: true
+        emit_empty_slices: true
