--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -9,10 +9,11 @@ sql:
         out: "./db/sqlc"
         sql_package: "pgx/v5"
         emit_json_tags: true
-        emit_interface: true
         emit_empty_slices: true
         overrides:
-          - db_type: "timestamptz"
+          - db_type: "timestamptz" # override pgtype.Timestamptz
             go_type: "time.Time"
-          - db_type: "uuid"
-            go_type: "github.com/google/uuid.UUID"
+          - db_type: "uuid" # override pgtype.UUID to use string
+            go_type:
+              import: "github.com/google/uuid"
+              type: "UUID"
